OSBuild now uploads container images directly to a container registry
CRD
---
Add a new section in the OSBuildEnvConfig for the container registry parameters

OSBuildEnvCnfig Controller
--------------------------
Worker Config - update the worker configuration file
Job - Pass the secrets (auth and optional CA certificate)
Playbook - Copy the certificates to the VM
Update UT

Config
------
Update the versions of OSBuild, OSBuild-Worker and OSBuild-Composer

OSBuild Controller
------------------
Update composer openapi yaml and client
Use container upload options and status when creating an edge-container
Name the container images with the name of the osbuild that created them
Do not pass nil on optional paramrter
update UT

Makefile
--------
Add target for updating the composer openapi file

Sample
------
Update the README along with create_env and the sample
Describe how to deploy the edge container with a sample
